styles/nav.scss
@import "_variables";

// mixin below is an alternative to outline the text for the logo - the stroke in css is not clean

/*
@mixin stroke($content, $translate: 3px) {
  display: inline-block;
  // targeting the before and after elements
  &::after {
    -webkit-text-stroke: 2px $background;
    color: transparent;
    letter-spacing: -15px;
    content: $content;
  }
  &::before {
    content: $content;
    position: relative;
    letter-spacing: -100px;
    top: $translate;
    left: $translate;
    // sets the position of ::before behind the main element
    z-index: -1;
  }
}
*/

nav {
  display: flex;
  height: 120px;
  width: 100%;
  background-color: $primary;
  padding-left: 1.5em;
  padding-right: 1.5em;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  top: 0;
}

#logo {
  display: inline-block;
  font-family: $heading-font;
  font-size: 90px;
  font-weight: 100;
  padding-left: 0.5em;
  letter-spacing: -10px;
  -webkit-text-stroke: 4px white;

  .c1 {
    color: $read;
  }

  .c2 {
    color: $watch;
  }

  .c3 {
    color: $eat;
  }

  .c4 {
    color: $buy;
  }

}


#nav-links {
  display: inline-block;
  width: 40%;
  justify-content: space-between;

  a {
    text-decoration: none;
    padding: 1em;
    color: $text-light;
    line-height: 40px;
    font-family: $text-font;

    &:hover {
      justify-content: center;
      width: 50px;
      height: 80px;
      border-radius: 48px;
      background: #FFF;
      color: $primary;
    }
  }

}

